src/styles/global.css
@import url("https://fonts.googleapis.com/css2?family=Italiana&family=Beth+Ellen&&family=Baskervville:ital@0;1&family=Judson:ital,wght@0,400;0,700;1,400&family=Petit+Formal+Script&family=Taviraj:ital,wght@0,400;1,500&family=Mitr:wght@200;300;400;500;600;700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Italiana&family=Judson:ital,wght@0,400;0,700;1,400&family=Mitr:wght@200;300;400;500;600;700&family=Taviraj:wght@100;200;300;400;500;600;700;800;900&display=swap");
@import "tailwindcss";

/* Hide scrollbar  */
/* .scrollbar-none::-webkit-scrollbar {
  display: none;
} */

.scrollbar-none {
  -ms-overflow-style: none;
  overflow-y: hidden;
  /* scrollbar-width: none; */
}

.hide-scrollbar {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

.hide-scrollbar::-webkit-scrollbar {
  display: none;
}

.mercy-font {
  font-family: "Mercy Christole", serif !important;
}

.taviraj-font {
  font-family: "Taviraj", serif !important;
}

@theme {
  --font-judson: "Judson", serif;
  --font-mitr: "Mitr", serif;
  --font-italiana: "Italiana", serif;
  --font-petit: "Petit Formal Script", serif;
  --font-taviraj: "Taviraj", serif;
  --font-baskervville: "Baskervville", serif;
  --font-bethellen: "Beth Ellen", serif;
}

@theme {
  --animate-bounce: bounce 3s ease-in-out infinite;
  @keyframes bounce {
    0%,
    100% {
      transform: translateY(-25%);
    }
    50% {
      transform: none;
    }
  }
}

@theme {
  --animate-fadeOut: fadeOut 3s ease-in-out forwards;
  @keyframes fadeOut {
    0% {
      opacity: 100;
    }

    100% {
      opacity: 0;
    }
  }
}
@theme {
  --animate-shortFadeOut: fadeOut 1s ease-in-out forwards;
  @keyframes fadeOut {
    0% {
      opacity: 100;
    }

    100% {
      opacity: 0;
    }
  }
}

@font-face {
  font-family: "Mercy Christole";
  src: url("/font/MercyChristole.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

